abstract, introduction, concept

--- a/sample.bib
+++ b/sample.bib
@@ -18,6 +18,22 @@ url = {https://developers.google.com/awareness/overview},
 note = {Retrieved August 22, 2016}
 }
 
+@ONLINE{stat14,
+author = {Statista},
+title = {Number of mobile phone users worldwide from 2013 to 2019},
+year = {2014}
+url = {http://www.statista.com/statistics/274774/forecast-of-mobile-phone-users-worldwide},
+note = {\url{http://www.statista.com/statistics/274774/forecast-of-mobile-phone-users-worldwide}}
+}
+
+@ONLINE{iihs05,
+author = {Insurance Institute for Highway Safety},
+title = {Cell phone use while driving and attributable crash risk},
+year = {2010},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/20872301},
+note = {\url{http://www.ncbi.nlm.nih.gov/pubmed/20872301}}
+}
+
 @Misc{CHINOSAUR:venue,
   author =       {@\_CHINOSAUR},
   key =          {_CHINOSAUR},
