--- a/sample.bib
+++ b/sample.bib
@@ -1,3 +1,14 @@
+@inproceedings{kern07,
+author = {Kern, Dagmar AND Schmidt, Albrecht AND Pitz, Michael AND Bengler, Klaus},
+title = {Status- und Kontextinformationen f\"{u}r die Telekommunikation im Auto},
+booktitle = {Mensch und Computer 2007: Interaktion im Plural},
+year = {2007},
+editor = {Gross, Tom},
+pages = {119-128},
+publisher = {Oldenbourg Verlag},
+address = {M\"{u}nchen}
+} 
+
 @Misc{you16,
   author =       {Google Inc.},
   title =        {Introducing the Awareness API, an easy way to make your apps context aware - Google I/O 2016},
@@ -21,7 +32,7 @@ note = {Retrieved August 22, 2016}
 @ONLINE{stat14,
 author = {Statista},
 title = {Number of mobile phone users worldwide from 2013 to 2019},
-year = {2014}
+year = {2014},
 url = {http://www.statista.com/statistics/274774/forecast-of-mobile-phone-users-worldwide},
 note = {\url{http://www.statista.com/statistics/274774/forecast-of-mobile-phone-users-worldwide}}
 }
