Related Work DeDe + In-car cell phone use

--- a/sample.bib
+++ b/sample.bib
@@ -9,6 +9,26 @@ publisher = {Oldenbourg Verlag},
 address = {M\"{u}nchen}
 } 
 
+@inproceedings{jung05,
+	author = {Younghee Jung, Per Persson, Jan Blom},
+	title = {DeDe: design and evaluation of a context-enhanced mobile messaging system},
+	booktitle = {CHI '05 Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+	year = {2005},
+	pages = {351-360},
+	publisher = {ACM},
+	address = {New York}
+} 
+
+@inproceedings{samar02,
+	author = {Punitha Manalavan, Asad Samar, Mike Schneider, Sara Kiesler, Dan Siewiorek},
+	title = {In-car cell phone use: mitigating risk by signaling remote callers},
+	booktitle = {CHI EA '02 CHI '02 Extended Abstracts on Human Factors in Computing Systems},
+	year = {2002},
+	pages = {790-791},
+	publisher = {ACM},
+	address = {New York}
+} 
+
 @Misc{you16,
   author =       {Google Inc.},
   title =        {Introducing the Awareness API, an easy way to make your apps context aware - Google I/O 2016},
