--- a/sample.bib
+++ b/sample.bib
@@ -34,7 +34,7 @@ author = {Statista},
 title = {Number of mobile phone users worldwide from 2013 to 2019},
 year = {2014},
 url = {http://www.statista.com/statistics/274774/forecast-of-mobile-phone-users-worldwide},
-note = {\url{http://www.statista.com/statistics/274774/forecast-of-mobile-phone-users-worldwide}}
+note = {Retrieved August 27, 2016}
 }
 
 @ONLINE{iihs05,
@@ -42,7 +42,31 @@ author = {Insurance Institute for Highway Safety},
 title = {Cell phone use while driving and attributable crash risk},
 year = {2010},
 url = {http://www.ncbi.nlm.nih.gov/pubmed/20872301},
-note = {\url{http://www.ncbi.nlm.nih.gov/pubmed/20872301}}
+note = {Retrieved August 27, 2016}
+}
+
+@ONLINE{adac,
+author = {ADAC e.V.},
+title = {ADAC Maps für Smartphone},
+year = {2016},
+url = {https://www.adac.de/mobile_angebote/maps_smartphones},
+note = {Retrieved August 27, 2016}
+}
+
+@ONLINE{aaa,
+author = {AAA East Central},
+title = {AAA App},
+year = {2016},
+url = {http://www.eastcentral.aaa.com/home/automotive/driving-resources/mobile-and-gps-solutions.html},
+note = {Retrieved August 27, 2016}
+}
+
+@ONLINE{glympse,
+author = {Glympse Inc},
+title = {Glympse},
+year = {2016},
+url = {http://glympse.com},
+note = {Retrieved August 27, 2016}
 }
 
 @Misc{CHINOSAUR:venue,
